# Volleyball-stat-tracker

./: .env  .gitignore  DEMO.md  README.md  pyproject.toml  readme.md  readme.mv  tracker.py
.devcontainer/: devcontainer.json
stats/: match_1.json  match_2.json
